# hort

./: .gitignore  Cargo.toml  README.md  example.Dockerfile
src/: cli.rs  fakes.rs  lib.rs  main.rs  ports.rs
src/adapters/: clock.rs  confirm.rs  environment.rs  liveness.rs  lock.rs  metadata.rs  mod.rs  network.rs  notify.rs  pasta.rs  prompt.rs  proxy.rs  runtime.rs  worktree.rs
src/commands/: attach.rs  config.rs  doctor.rs  down.rs  ls.rs  mod.rs  prune.rs  up.rs
src/domain/: config.rs  egress.rs  error.rs  idle.rs  mod.rs  model.rs  onboarding.rs  policy.rs  prune.rs  reconcile.rs  teardown.rs
tests/: cli.rs
